add valorant game link

--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@
                                     <img src="https://static-cdn.jtvnw.net/ttv-boxart/33214-285x380.jpg" alt="imagem do jogo Fortnite">
                                 </a>
                             </li>
+
+                            <li>
+                                <a
+                                target="_blank"
+                                href="https://www.twitch.tv/directory/game/VALORANT">
+                                    <img src="https://static-cdn.jtvnw.net/ttv-boxart/516575-285x380.jpg" alt="imagem do jogo valorant">
+                                </a>
+                            </li>
                         </ul>
                     </div>
             </section>
